step-06/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus
  labels:
    app: quarkus
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quarkus
  template:
    metadata:
      labels:
        app: quarkus
    spec:
      containers:
      - name: quarkus
        image: ghcr.io/gaol/helloworld:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
          limits:
            memory: 400Mi
            cpu: 200m
