step-06/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus
spec:
  selector:
    app: quarkus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
